--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tebafaz-blog",
-  "version": "0.1.0",
+  "name": "cineseeders",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,10 +9,13 @@
     "export": "next build && next export"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "next": "10.2.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-particles-js": "^3.4.1"
+    "axios": "^1.3.4",
+    "next": "13.2.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.36.0",
+    "eslint-plugin-react": "^7.32.2"
   }
 }
