--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,5 +10,5 @@ jobs:
       run: |
         npm install eslint@8.10.0
         npx eslint . \
-          --config .eslintrc.js \
+          --config .eslintrc.json \
           --ext .js
