--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "export": "next build && next export"
   },
   "dependencies": {
-    "axios": "^1.3.4",
-    "next": "13.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "axios": "^1.7.9",
+    "next": "^15.1.4",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "eslint": "^8.36.0",
